[package]
name = "hezen_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["interpreter"]
interpreter = ["dep:hezen_interpreter"]
compiler = ["dep:hezen_compiler"]

[dependencies]
hezen_core = { path = "../hezen_core" }
hezen_interpreter = { path = "../hezen_interpreter", optional = true }
hezen_compiler = { path = "../hezen_compiler", optional = true }
